Fixing a few layout issues on the service list and service form pages.

--- a/frontend/styles/site.less
+++ b/frontend/styles/site.less
@@ -201,7 +201,7 @@ float: none;
 }
 
 .submit-form {
-    height: 32px;
+    height: 60px;
     margin-bottom: 10px;
 
     .primary-button {
@@ -434,7 +434,7 @@ float: none;
 	font-size: .75em;
 	padding: 16px 12px;
 	position: relative;
-	top: -19px;
+	top: -15px;
     -webkit-border-bottom-left-radius: 4px;
 	-moz-border-bottom-left-radius: 4px;
 	border-bottom-left-radius: 4px;
@@ -938,6 +938,7 @@ table {
 	background-color: #fff;
 	border-collapse: collapse;
 	margin: 0 0 0 50%;
+	-webkit-transform: translate(-50%, 0);
 	transform: translate(-50%, 0);
 	tr {
         border-right-width: 5px;
